// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowService getFlowDiagram should return nodes and edges for a group with children 1`] = `
[
  {
    "children": undefined,
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "catalogKind": "entity",
          "name": "route",
        },
        "id": "child1",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": [
            [Circular],
            VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {
                "catalogKind": "entity",
                "name": "route",
              },
              "id": "child2",
              "lastUpdate": 0,
              "nextNode": undefined,
              "parentNode": [Circular],
              "previousNode": undefined,
            },
          ],
          "data": {
            "catalogKind": "entity",
            "isGroup": true,
            "name": "route",
          },
          "id": "group",
          "lastUpdate": 0,
          "nextNode": undefined,
          "parentNode": undefined,
          "previousNode": undefined,
        },
        "previousNode": undefined,
      },
    },
    "height": 75,
    "id": "test|child1",
    "parentNode": "test|group",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": undefined,
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "catalogKind": "entity",
          "name": "route",
        },
        "id": "child2",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": [
            VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {
                "catalogKind": "entity",
                "name": "route",
              },
              "id": "child1",
              "lastUpdate": 0,
              "nextNode": undefined,
              "parentNode": [Circular],
              "previousNode": undefined,
            },
            [Circular],
          ],
          "data": {
            "catalogKind": "entity",
            "isGroup": true,
            "name": "route",
          },
          "id": "group",
          "lastUpdate": 0,
          "nextNode": undefined,
          "parentNode": undefined,
          "previousNode": undefined,
        },
        "previousNode": undefined,
      },
    },
    "height": 75,
    "id": "test|child2",
    "parentNode": "test|group",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [
      "test|child1",
      "test|child2",
    ],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": [
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {
              "catalogKind": "entity",
              "name": "route",
            },
            "id": "child1",
            "lastUpdate": 0,
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
          },
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {
              "catalogKind": "entity",
              "name": "route",
            },
            "id": "child2",
            "lastUpdate": 0,
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
          },
        ],
        "data": {
          "catalogKind": "entity",
          "isGroup": true,
          "name": "route",
        },
        "id": "group",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "group": true,
    "id": "test|group",
    "label": "group",
    "parentNode": undefined,
    "style": {
      "padding": 40,
    },
    "type": "group",
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a group with children 2`] = `[]`;

exports[`FlowService getFlowDiagram should return nodes and edges for a multiple nodes VisualizationNode 1`] = `
[
  {
    "children": undefined,
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "catalogKind": "entity",
          "name": "route",
        },
        "id": "node",
        "lastUpdate": 0,
        "nextNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": undefined,
          "data": {
            "catalogKind": "entity",
            "name": "route",
          },
          "id": "set-header",
          "lastUpdate": 0,
          "nextNode": VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": [
              VisualizationNode {
                "DISABLED_NODE_INTERACTION": {
                  "canBeDisabled": false,
                  "canHaveChildren": false,
                  "canHaveNextStep": false,
                  "canHavePreviousStep": false,
                  "canHaveSpecialChildren": false,
                  "canRemoveFlow": false,
                  "canRemoveStep": false,
                  "canReplaceStep": false,
                },
                "children": [
                  VisualizationNode {
                    "DISABLED_NODE_INTERACTION": {
                      "canBeDisabled": false,
                      "canHaveChildren": false,
                      "canHaveNextStep": false,
                      "canHavePreviousStep": false,
                      "canHaveSpecialChildren": false,
                      "canRemoveFlow": false,
                      "canRemoveStep": false,
                      "canReplaceStep": false,
                    },
                    "children": undefined,
                    "data": {
                      "catalogKind": "entity",
                      "name": "route",
                    },
                    "id": "when-leaf",
                    "lastUpdate": 0,
                    "nextNode": undefined,
                    "parentNode": [Circular],
                    "previousNode": undefined,
                  },
                ],
                "data": {
                  "catalogKind": "entity",
                  "name": "route",
                },
                "id": "when",
                "lastUpdate": 0,
                "nextNode": undefined,
                "parentNode": [Circular],
                "previousNode": undefined,
              },
              VisualizationNode {
                "DISABLED_NODE_INTERACTION": {
                  "canBeDisabled": false,
                  "canHaveChildren": false,
                  "canHaveNextStep": false,
                  "canHavePreviousStep": false,
                  "canHaveSpecialChildren": false,
                  "canRemoveFlow": false,
                  "canRemoveStep": false,
                  "canReplaceStep": false,
                },
                "children": [
                  VisualizationNode {
                    "DISABLED_NODE_INTERACTION": {
                      "canBeDisabled": false,
                      "canHaveChildren": false,
                      "canHaveNextStep": false,
                      "canHavePreviousStep": false,
                      "canHaveSpecialChildren": false,
                      "canRemoveFlow": false,
                      "canRemoveStep": false,
                      "canReplaceStep": false,
                    },
                    "children": [
                      VisualizationNode {
                        "DISABLED_NODE_INTERACTION": {
                          "canBeDisabled": false,
                          "canHaveChildren": false,
                          "canHaveNextStep": false,
                          "canHavePreviousStep": false,
                          "canHaveSpecialChildren": false,
                          "canRemoveFlow": false,
                          "canRemoveStep": false,
                          "canReplaceStep": false,
                        },
                        "children": undefined,
                        "data": {
                          "catalogKind": "entity",
                          "name": "route",
                        },
                        "id": "log",
                        "lastUpdate": 0,
                        "nextNode": undefined,
                        "parentNode": [Circular],
                        "previousNode": undefined,
                      },
                    ],
                    "data": {
                      "catalogKind": "entity",
                      "name": "route",
                    },
                    "id": "process",
                    "lastUpdate": 0,
                    "nextNode": undefined,
                    "parentNode": [Circular],
                    "previousNode": undefined,
                  },
                ],
                "data": {
                  "catalogKind": "entity",
                  "name": "route",
                },
                "id": "otherwise",
                "lastUpdate": 0,
                "nextNode": undefined,
                "parentNode": [Circular],
                "previousNode": undefined,
              },
            ],
            "data": {
              "catalogKind": "entity",
              "name": "route",
            },
            "id": "choice",
            "lastUpdate": 0,
            "nextNode": VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {
                "catalogKind": "entity",
                "name": "route",
              },
              "id": "direct",
              "lastUpdate": 0,
              "nextNode": undefined,
              "parentNode": undefined,
              "previousNode": [Circular],
            },
            "parentNode": undefined,
            "previousNode": [Circular],
          },
          "parentNode": undefined,
          "previousNode": [Circular],
        },
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "height": 75,
    "id": "test|node",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a multiple nodes VisualizationNode 2`] = `
[
  {
    "edgeStyle": "solid",
    "id": "test|node >>> set-header",
    "source": "test|node",
    "target": "test|set-header",
    "type": "edge",
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a simple VisualizationNode 1`] = `
[
  {
    "children": undefined,
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "catalogKind": "entity",
          "name": "route",
        },
        "id": "node",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "height": 75,
    "id": "test|node",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a simple VisualizationNode 2`] = `[]`;

exports[`FlowService getFlowDiagram should return nodes and edges for a two-nodes VisualizationNode 1`] = `
[
  {
    "children": undefined,
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": [
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {
              "catalogKind": "entity",
              "name": "route",
            },
            "id": "child",
            "lastUpdate": 0,
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
          },
        ],
        "data": {
          "catalogKind": "entity",
          "name": "route",
        },
        "id": "node",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "height": 75,
    "id": "test|node",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a two-nodes VisualizationNode 2`] = `[]`;
